--- a/about.html
+++ b/about.html
@@ -29,18 +29,22 @@
             </ul>
         </nav>
         <img class="Illustration" src="img/Illustration.png" alt="logo">
-        <div class="social">
-            <a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png" /></a>
+        <div class="social"><a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png" /></a>
             <a href="https://www.linkedin.com/in/sarah-larsen-a9585021b/"><img src="img/linkedin.png"
                     alt="linkedin" /></a>
             <a href="https://www.facebook.com/sarah.m.larsen.1/"><img src="img/facebook.png" alt="facebook" /></a>
         </div>
     </header>
 
-    <main class="portfolios">
-        <a href="portfolio1.html"><img class="portfolio1" src="img/Tangoterapi.jpg" alt="Tangoterapi" /></a>
-        <a href="portfolio2.html"><img class="portfolio2" src="img/TeamZumba.jpg" alt="TeamZumba"></a>
-        <a href="portfolio3.html"><img class="portfolio3" src="img/Gocycle.jpg" alt="Gocycle"></a>
+    <main>
+        <section class="introtekst">
+            <h1>Tangoterapi</h1>
+            <h2>- Webdesign, UI and usersegment</h2>
+            <p>om Mig kommer....
+            </p> <br><br>
+
+            <img class="center" src="img/mig.png" alt="Sarah" />
+        </section>
     </main>
 
 </body>
