--- a/contact.html
+++ b/contact.html
@@ -29,18 +29,38 @@
             </ul>
         </nav>
         <img class="Illustration" src="img/Illustration.png" alt="logo">
-        <div class="social">
-            <a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png" /></a>
+        <div class="social"><a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png" /></a>
             <a href="https://www.linkedin.com/in/sarah-larsen-a9585021b/"><img src="img/linkedin.png"
                     alt="linkedin" /></a>
             <a href="https://www.facebook.com/sarah.m.larsen.1/"><img src="img/facebook.png" alt="facebook" /></a>
         </div>
     </header>
 
-    <main class="portfolios">
-        <a href="portfolio1.html"><img class="portfolio1" src="img/Tangoterapi.jpg" alt="Tangoterapi" /></a>
-        <a href="portfolio2.html"><img class="portfolio2" src="img/TeamZumba.jpg" alt="TeamZumba"></a>
-        <a href="portfolio3.html"><img class="portfolio3" src="img/Gocycle.jpg" alt="Gocycle"></a>
+    <main>
+        <section class="introtekst">
+            <section class="introtekst">
+                <h1>Gør gnisten til en flamme</h1>
+                <h2>- Til jer der vil investere i et sundt forhold</h2>
+                <p>
+                <div class="container">
+                    <form action="about.php">
+
+                        <label for="name">Name</label>
+                        <input type="text" id="fname" name="Name">
+
+                        <label for="lname">E-mail</label>
+                        <input type="text" id="lname" name="E-mail">
+
+                        <label for="subject">Subject</label>
+                        <textarea id="subject" name="subject" style="height:200px"></textarea>
+
+                        <input type="submit" value="Submit">
+
+                    </form>
+                </div>
+                </p>
+            </section>
+        </section>
     </main>
 
 </body>
