--- a/portfolio3.html
+++ b/portfolio3.html
@@ -29,18 +29,29 @@
             </ul>
         </nav>
         <img class="Illustration" src="img/Illustration.png" alt="logo">
-        <div class="social">
-            <a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png" /></a>
+        <div class="social"><a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png" /></a>
             <a href="https://www.linkedin.com/in/sarah-larsen-a9585021b/"><img src="img/linkedin.png"
                     alt="linkedin" /></a>
             <a href="https://www.facebook.com/sarah.m.larsen.1/"><img src="img/facebook.png" alt="facebook" /></a>
         </div>
     </header>
 
-    <main class="portfolios">
-        <a href="portfolio1.html"><img class="portfolio1" src="img/Tangoterapi.jpg" alt="Tangoterapi" /></a>
-        <a href="portfolio2.html"><img class="portfolio2" src="img/TeamZumba.jpg" alt="TeamZumba"></a>
-        <a href="portfolio3.html"><img class="portfolio3" src="img/Gocycle.jpg" alt="Gocycle"></a>
+    <main>
+        <section class="introtekst">
+            <h1>Gocycle - Startup mission</h1>
+            <h2>- Idéudvikling</h2>
+            <p>I dette projekt, deltog vi i en iværksætterkonkurrence, hvor vi fik til opgave at udvikle en idé og en
+                tilhørende digital prototype, som vi efterfølgende skulle pitche til et hold dommer, så vi kunne få
+                sparring og feedback på vores idé.
+                Vi valgte at designe en prototype til en app inden for kategorien Greentech som indebærer genbrug og
+                grønne løsninger, med fokus på muligheder inden for bæredygtig livsstil og forretninger.
+                Appen GoCycle fungerer som en platform hvor man kan sælge og købe secondhandvarer og en grønnere og mere
+                bæredygtig leveringsmulighed i form af privatpersoner der fragter varen fra a til b.
+
+                Min rolle i dette projekt, var at indsamle data til målgruppeanalyse og udarbejdelse af personer.
+                Desuden var jeg designansvarlig i dette projek</p>
+            <img src="img/Gocycle.jpg" alt="GoCycle">
+        </section>
     </main>
 
 </body>
