--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div class="logo"><img src="img/Sarah Marina.png" /></div>
+        <div class="logo"><img src="img/Sarah-Marina.png" /></div>
         <nav class="navbar">
             <ul>
                 <li>
@@ -30,9 +30,9 @@
         </nav>
         <img class="Illustration" src="img/Illustration.png" alt="logo">
         <div class="social">
-            <a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png" /></a>
+            <a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png" alt="Instagram"/></a>
             <a href="https://www.linkedin.com/in/sarah-larsen-a9585021b/"><img src="img/linkedin.png"
-                    alt="linkedin" /></a>
+                    alt="linkedin"/></a>
             <a href="https://www.facebook.com/sarah.m.larsen.1/"><img src="img/facebook.png" alt="facebook" /></a>
         </div>
     </header>
