--- a/portfolio3.html
+++ b/portfolio3.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div class="logo"><img src="img/Sarah-Marina.png" /></div>
+        <div class="logo"><img src="img/Sarah-Marina.png" alt="SarahMarina"/></div>
         <nav class="navbar">
             <ul>
                 <li>
