--- a/about.html
+++ b/about.html
@@ -5,16 +5,17 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>Hjem</title>
+    <title>About</title>
     <!--Linjen nedenunder er link og tilknytning videre til CSS dokument med styling-->
     <link rel="stylesheet" type="text/css" href="style.css">
     <!--Ikon i browser-->
     <link rel="icon" href="ikon.png">
+    <!--Inspiration fra tidligere projekt https://sarahmarina.one/tangoterapi/index.html-->
 </head>
 
 <body>
     <header>
-        <div class="logo"><img src="img/Sarah-Marina.png" alt="SarahMarina"/></div>
+        <div class="logo"><a href="index.html" ><img src="img/Sarah-Marina.png" alt="SarahMarina"/></a></div>
         <nav class="navbar">
             <ul>
                 <li>
@@ -27,6 +28,7 @@
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
+            <!--https://www.w3schools.com/tags/tag_ul.asp-->
         </nav>
         <img class="Illustration" src="img/Illustration.png" alt="logo">
         <div class="social"><a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png" alt="Instagram" /></a>
@@ -38,9 +40,12 @@
 
     <main>
         <section class="introtekst">
-            <h1>Tangoterapi</h1>
-            <h2>- Webdesign, UI and usersegment</h2>
-            <p>om Mig kommer....
+            <h1>Hello!</h1>
+            <h2>My name is Sarah Marina and I’m currently studying multimedia design at Zealand academy</h2>
+            <p>I chose to study multimedia design, because of the crippling urge to “create something” wether it being logos, illustrations, webdesign, videography etc. 
+            I had little to no experience within the creative field before I began my studies, but that began to change drastically within the first semester of my degree.
+            I have now gained I experience in Adobe Photoshop, Illustrator, XD, Premiere Pro and After effects.
+            I have also gained experience in Visual studio code. I have worked thoroughly with design process and design thinking.
             </p> <br><br>
 
             <img class="center" src="img/mig.png" alt="Sarah" />
