--- a/portfolio1.html
+++ b/portfolio1.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>Hjem</title>
+    <title>Projekt 1</title>
     <!--Linjen nedenunder er link og tilknytning videre til CSS dokument med styling-->
     <link rel="stylesheet" type="text/css" href="style.css">
     <!--Ikon i browser-->
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div class="logo"><img src="img/Sarah-Marina.png" alt="SarahMarina"/></div>
+        <div class="logo"><a href="index.html" ><img src="img/Sarah-Marina.png" alt="SarahMarina"/></a></div>
         <nav class="navbar">
             <ul>
                 <li>
@@ -27,10 +27,13 @@
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
+             <!--https://www.w3schools.com/tags/tag_ul.asp-->
         </nav>
         <img class="Illustration" src="img/Illustration.png" alt="logo">
-        <div class="social"><a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png" alt="Instagram" /></a>
-            <a href="https://www.linkedin.com/in/sarah-larsen-a9585021b/"><img src="img/linkedin.png" alt="linkedin" /></a>
+        <div class="social"><a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png"
+                    alt="Instagram" /></a>
+            <a href="https://www.linkedin.com/in/sarah-larsen-a9585021b/"><img src="img/linkedin.png"
+                    alt="linkedin" /></a>
             <a href="https://www.facebook.com/sarah.m.larsen.1/"><img src="img/facebook.png" alt="facebook" /></a>
         </div>
     </header>
@@ -39,21 +42,19 @@
         <section class="introtekst">
             <h1>Tangoterapi</h1>
             <h2>- Webdesign, UI and usersegment</h2>
-            <p>I dette projekt fik vi til opgave at udarbejde digitale produkter til et specifikt brugersegment. Vores
-                primære fokus i dette var forløb var vores designprocess.
-                Vi fik uddelegeret en dans og fik til opgave formulere en designudfordring. “Hvordan får vi flere folk
-                til at deltage I tango?”
-                Vi pågyndte vores researchfase, hvor vi lavet en del deskresearch/observationer, og der begyndte der at
-                tegne sig en tendens, altså at der I parforhold tit kan opstå kommunikationskløft.
-                Vores idé var altså følgende: At tilbyde tango som et terapiforløb for par, så de igennem dansen kan
-                komme tættere på hinanden.
-                <br>
-                <br>
-                Min primære rolle i dette projekt var at lave deskresearch/observationer og målgruppeanalyse og udføre
-                UI. Ud fra den data vi havde indsamlet udarbejdede vi vores personaer.
-            </p> <br><br>
+            <p>In this project our assignment was to develop digital products for a specific usersegment.
+                Our primary focus was design process. We were given the task to construct a design challenge; “How do we
+                get more people to join tango?”
+                We started our research phase, with deskresearch/observations.
+                Our idea for a solution was to use Tango as a couples therapy trial, where couples would be able to work
+                on their relationsship through dance lessons.
 
-            <img src="img/Tangoterapi.jpg" alt="Tangoterapi">
+                My primary role in this project was to collect data for target group analyzing.
+
+
+            </p>
+
+            <img class="center" src="img/Tangoterapi.jpg" alt="Tangoterapi">
         </section>
     </main>
 
