--- a/portfolio3.html
+++ b/portfolio3.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>Hjem</title>
+    <title>Projekt 3</title>
     <!--Linjen nedenunder er link og tilknytning videre til CSS dokument med styling-->
     <link rel="stylesheet" type="text/css" href="style.css">
     <!--Ikon i browser-->
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div class="logo"><img src="img/Sarah-Marina.png" alt="SarahMarina"/></div>
+        <div class="logo"><a href="index.html" ><img src="img/Sarah-Marina.png" alt="SarahMarina"/></a></div>
         <nav class="navbar">
             <ul>
                 <li>
@@ -27,10 +27,13 @@
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
+            <!--https://www.w3schools.com/tags/tag_ul.asp-->
         </nav>
         <img class="Illustration" src="img/Illustration.png" alt="logo">
-        <div class="social"><a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png" alt="Instagram" /></a>
-            <a href="https://www.linkedin.com/in/sarah-larsen-a9585021b/"><img src="img/linkedin.png" alt="linkedin" /></a>
+        <div class="social"><a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png"
+                    alt="Instagram" /></a>
+            <a href="https://www.linkedin.com/in/sarah-larsen-a9585021b/"><img src="img/linkedin.png"
+                    alt="linkedin" /></a>
             <a href="https://www.facebook.com/sarah.m.larsen.1/"><img src="img/facebook.png" alt="facebook" /></a>
         </div>
     </header>
@@ -38,18 +41,16 @@
     <main>
         <section class="introtekst">
             <h1>Gocycle - Startup mission</h1>
-            <h2>- Idéudvikling</h2>
-            <p>I dette projekt, deltog vi i en iværksætterkonkurrence, hvor vi fik til opgave at udvikle en idé og en
-                tilhørende digital prototype, som vi efterfølgende skulle pitche til et hold dommer, så vi kunne få
-                sparring og feedback på vores idé.
-                Vi valgte at designe en prototype til en app inden for kategorien Greentech som indebærer genbrug og
-                grønne løsninger, med fokus på muligheder inden for bæredygtig livsstil og forretninger.
-                Appen GoCycle fungerer som en platform hvor man kan sælge og købe secondhandvarer og en grønnere og mere
-                bæredygtig leveringsmulighed i form af privatpersoner der fragter varen fra a til b.
+            <h2>- Innovation</h2>
+            <p>In this project, my group and I were in an euntepreneur competition, where our assignment was to develop
+                an idea and make a digital prototype.
+                We chose to design a prototype for an app, with our main focus being recycling and envoirmental
+                solutions.
+                Our app GoCycle works as a platform for buying/selling secondhand, and a sustainable delieverymethod.
 
-                Min rolle i dette projekt, var at indsamle data til målgruppeanalyse og udarbejdelse af personer.
-                Desuden var jeg designansvarlig i dette projek</p>
-            <img src="img/Gocycle.jpg" alt="GoCycle">
+                My role in this project was to collect qualitative and kvantitative data for target group analysing and
+                choosing our design choices.</p>
+            <img class="center" src="img/Gocycle.jpg" alt="GoCycle">
         </section>
     </main>
 
