--- a/contact.html
+++ b/contact.html
@@ -5,16 +5,17 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>Hjem</title>
+    <title>Contact</title>
     <!--Linjen nedenunder er link og tilknytning videre til CSS dokument med styling-->
     <link rel="stylesheet" type="text/css" href="style.css">
     <!--Ikon i browser-->
     <link rel="icon" href="ikon.png">
+    <!--Inspiration fra tidligere projekt https://sarahmarina.one/tangoterapi/index.html-->
 </head>
 
 <body>
     <header>
-        <div class="logo"><img src="img/Sarah-Marina.png" alt="SarahMarina"/></div>
+        <div class="logo"><a href="index.html"><img src="img/Sarah-Marina.png" alt="SarahMarina" /></a></div>
         <nav class="navbar">
             <ul>
                 <li>
@@ -27,9 +28,11 @@
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
+            <!--https://www.w3schools.com/tags/tag_ul.asp-->
         </nav>
         <img class="Illustration" src="img/Illustration.png" alt="logo">
-        <div class="social"><a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png" alt="Instagram" /></a>
+        <div class="social"><a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png"
+                    alt="Instagram" /></a>
             <a href="https://www.linkedin.com/in/sarah-larsen-a9585021b/"><img src="img/linkedin.png" alt="Linkdin"
                     alt="linkedin" /></a>
             <a href="https://www.facebook.com/sarah.m.larsen.1/"><img src="img/facebook.png" alt="facebook" /></a>
@@ -39,8 +42,7 @@
     <main>
         <section class="introtekst">
             <section class="introtekst">
-                <h1>Gør gnisten til en flamme</h1>
-                <h2>- Til jer der vil investere i et sundt forhold</h2>
+                <h1>CONTACT</h1>
                 <p>
                 <div class="container">
                     <form action="about.php">
@@ -57,6 +59,7 @@
                         <input type="submit" value="Submit">
 
                     </form>
+                    <!--https://portfolio.adobe.com/4676f381-1a78-4b9d-9efb-65d315a31f1c/editor/contact-->
                 </div>
                 </p>
             </section>
