--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div class="logo"><img src="img/Sarah-Marina.png" alt="SarahMarina"/></div>
+        <div class="logo"><a href="index.html" ><img src="img/Sarah-Marina.png" alt="SarahMarina"/></a></div>
         <nav class="navbar">
             <ul>
                 <li>
@@ -27,6 +27,7 @@
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
+             <!--https://www.w3schools.com/tags/tag_ul.asp-->
         </nav>
         <img class="Illustration" src="img/Illustration.png" alt="logo">
         <div class="social">
