--- a/portfolio2.html
+++ b/portfolio2.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <title>Hjem</title>
+    <title>Projekt 2</title>
     <!--Linjen nedenunder er link og tilknytning videre til CSS dokument med styling-->
     <link rel="stylesheet" type="text/css" href="style.css">
     <!--Ikon i browser-->
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div class="logo"><img src="img/Sarah-Marina.png" alt="SarahMarina"/></div>
+        <div class="logo"><a href="index.html" ><img src="img/Sarah-Marina.png" alt="SarahMarina"/></a></div>
         <nav class="navbar">
             <ul>
                 <li>
@@ -27,9 +27,11 @@
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
+            <!--https://www.w3schools.com/tags/tag_ul.asp-->
         </nav>
         <img class="Illustration" src="img/Illustration.png" alt="logo">
-        <div class="social"><a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png" alt="Instagram" /></a>
+        <div class="social"><a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png"
+                    alt="Instagram" /></a>
             <a href="https://www.linkedin.com/in/sarah-larsen-a9585021b/"><img src="img/linkedin.png"
                     alt="linkedin" /></a>
             <a href="https://www.facebook.com/sarah.m.larsen.1/"><img src="img/facebook.png" alt="facebook" /></a>
@@ -40,23 +42,18 @@
         <section class="introtekst">
             <h1>TeamZumba</h1>
             <h2>Usersegment, optimizing and Iterations</h2>
-            <p>I dette projekt fik vi overdraget et projekt, en anden gruppe, her fik vi til opgave at optimere og
-                viderudvikle på en anden gruppes projekt.
-                Da vi opgaven lød på at vi skulle udarbejde et digitalt produkt til et specifikt brugersegment, overtog
-                vi den tidligere gruppes data og byggede videre på det.
-                Desuden skulle der være fokus på iterationer, altså hvordan vi er gået frem og tilbage i vores
-                designprocessen.
-                Deres udfordring, “Hvordan kan vi gøre Zumba mere tilgængeligt for mænd?”, da vi så en del begrænsinger
-                ved den udfordring, udvidede vi det til at gøre Zumba til et teambuildingtilbud til virksomheder for at
-                ryste dem sammen.
-                Vi startede altså en ny researchfase, med deskresearch/observationer, målgruppenalyse og interviews. Her
-                udarbejdede vi nye personer, og appelerede til et nyt brugersegment.
+            <p>In this project we were given the project of another group.
+                Our task was to optimize and further develop their project. As we saw limitations to their initial
+                concept, we decided to completely redesign the webside and concept.
+                We decided to offer Zumba as teambuilding event for companies who wished to bring the coworkers
+                together.
+                We began a new researchphase, with deskresearch/observations/intervies.
+
             </p>
             <p>
-                Min primære udfordring i dette projekt var at lave deskresearch/observationer, målgruppenanalyse og
-                udarbejdelse af nye personaer, desuden var det min opgave at illustrere hvordan vi havde gjort brug af
-                iterationer i designprocessen.</p>
-            <img src="img/Teamzumba2.png" alt="TeamZumba">
+                My role in this project was to administer the design process, and illustrate our iterations in the
+                process.</p>
+            <img class="center" src="img/Teamzumba2.png" alt="TeamZumba">
         </section>
 
 
