Added scrolldown gif & beautify

--- a/about.html
+++ b/about.html
@@ -8,14 +8,12 @@
     <title>About</title>
     <!--Linjen nedenunder er link og tilknytning videre til CSS dokument med styling-->
     <link rel="stylesheet" type="text/css" href="style.css">
-    <!--Ikon i browser-->
-    <link rel="icon" href="ikon.png">
     <!--Inspiration fra tidligere projekt https://sarahmarina.one/tangoterapi/index.html-->
 </head>
 
 <body>
     <header>
-        <div class="logo"><a href="index.html" ><img src="img/Sarah-Marina.png" alt="SarahMarina"/></a></div>
+        <div class="logo"><a href="index.html"><img src="img/Sarah-Marina.png" alt="SarahMarina" /></a></div>
         <nav class="navbar">
             <ul>
                 <li>
@@ -31,10 +29,12 @@
             <!--https://www.w3schools.com/tags/tag_ul.asp-->
         </nav>
         <img class="Illustration" src="img/Illustration.png" alt="logo">
-        <div class="social"><a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png" alt="Instagram" /></a>
+        <div class="social"><a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png"
+                    alt="Instagram" /></a>
             <a href="https://www.linkedin.com/in/sarah-larsen-a9585021b/"><img src="img/linkedin.png" alt="Linkdin"
                     alt="linkedin" /></a>
             <a href="https://www.facebook.com/sarah.m.larsen.1/"><img src="img/facebook.png" alt="facebook" /></a>
+            <img class="scrolldown" src="img/giphy.gif" alt="scrolldown">
         </div>
     </header>
 
@@ -42,10 +42,13 @@
         <section class="introtekst">
             <h1>Hello!</h1>
             <h2>My name is Sarah Marina and I’m currently studying multimedia design at Zealand academy</h2>
-            <p>I chose to study multimedia design, because of the crippling urge to “create something” wether it being logos, illustrations, webdesign, videography etc. 
-            I had little to no experience within the creative field before I began my studies, but that began to change drastically within the first semester of my degree.
-            I have now gained I experience in Adobe Photoshop, Illustrator, XD, Premiere Pro and After effects.
-            I have also gained experience in Visual studio code. I have worked thoroughly with design process and design thinking.
+            <p>I chose to study multimedia design, because of the crippling urge to “create something” wether it being
+                logos, illustrations, webdesign, videography etc.
+                I had little to no experience within the creative field before I began my studies, but that began to
+                change drastically within the first semester of my degree.
+                I have now gained I experience in Adobe Photoshop, Illustrator, XD, Premiere Pro and After effects.
+                I have also gained experience in Visual studio code. I have worked thoroughly with design process and
+                design thinking.
             </p> <br><br>
 
             <img class="center" src="img/mig.png" alt="Sarah" />
