--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,6 @@
     <title>Contact</title>
     <!--Linjen nedenunder er link og tilknytning videre til CSS dokument med styling-->
     <link rel="stylesheet" type="text/css" href="style.css">
-    <!--Ikon i browser-->
-    <link rel="icon" href="ikon.png">
     <!--Inspiration fra tidligere projekt https://sarahmarina.one/tangoterapi/index.html-->
 </head>
 
@@ -36,13 +34,14 @@
             <a href="https://www.linkedin.com/in/sarah-larsen-a9585021b/"><img src="img/linkedin.png" alt="Linkdin"
                     alt="linkedin" /></a>
             <a href="https://www.facebook.com/sarah.m.larsen.1/"><img src="img/facebook.png" alt="facebook" /></a>
+            <img class="scrolldown" src="img/giphy.gif" alt="scrolldown">
         </div>
     </header>
 
     <main>
         <section class="introtekst">
-                <h1>CONTACT</h1>
-                <p>
+            <h1>CONTACT</h1>
+            <p>
                 <div class="container">
                     <form action="about.php">
 
@@ -60,7 +59,7 @@
                     </form>
                     <!--https://portfolio.adobe.com/4676f381-1a78-4b9d-9efb-65d315a31f1c/editor/contact-->
                 </div>
-                </p>
+            </p>
         </section>
     </main>
 
