--- a/portfolio1.html
+++ b/portfolio1.html
@@ -8,13 +8,11 @@
     <title>Projekt 1</title>
     <!--Linjen nedenunder er link og tilknytning videre til CSS dokument med styling-->
     <link rel="stylesheet" type="text/css" href="style.css">
-    <!--Ikon i browser-->
-    <link rel="icon" href="ikon.png">
 </head>
 
 <body>
     <header>
-        <div class="logo"><a href="index.html" ><img src="img/Sarah-Marina.png" alt="SarahMarina"/></a></div>
+        <div class="logo"><a href="index.html"><img src="img/Sarah-Marina.png" alt="SarahMarina" /></a></div>
         <nav class="navbar">
             <ul>
                 <li>
@@ -27,7 +25,7 @@
                     <a href="contact.html">Contact</a>
                 </li>
             </ul>
-             <!--https://www.w3schools.com/tags/tag_ul.asp-->
+            <!--https://www.w3schools.com/tags/tag_ul.asp-->
         </nav>
         <img class="Illustration" src="img/Illustration.png" alt="logo">
         <div class="social"><a href="https://www.instagram.com/sarahmariina/"><img src="img/instagram.png"
@@ -35,6 +33,7 @@
             <a href="https://www.linkedin.com/in/sarah-larsen-a9585021b/"><img src="img/linkedin.png"
                     alt="linkedin" /></a>
             <a href="https://www.facebook.com/sarah.m.larsen.1/"><img src="img/facebook.png" alt="facebook" /></a>
+            <img class="scrolldown" src="img/giphy.gif" alt="scrolldown">
         </div>
     </header>
 
