Diverse fixes og formatering/beautify

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         <nav class="navbar">
             <ul>
                 <li>
-                    <a class="active" href="index.html">Work</a>
+                    <a href="index.html">Work</a>
                 </li>
                 <li>
                     <a href="about.html">About</a>
@@ -38,22 +38,22 @@
         </div>
     </header>
 
-    <main>
-        <section class="introtekst">
-            <h1>Hello!</h1>
-            <h2>My name is Sarah Marina and I’m currently studying multimedia design at Zealand academy</h2>
-            <p>I chose to study multimedia design, because of the crippling urge to “create something” wether it being
-                logos, illustrations, webdesign, videography etc.
-                I had little to no experience within the creative field before I began my studies, but that began to
-                change drastically within the first semester of my degree.
-                I have now gained I experience in Adobe Photoshop, Illustrator, XD, Premiere Pro and After effects.
-                I have also gained experience in Visual studio code. I have worked thoroughly with design process and
-                design thinking.
-            </p> <br><br>
 
-            <img class="center" src="img/mig.png" alt="Sarah" />
-        </section>
-    </main>
+    <section class="introtekst">
+        <h1>Hello!</h1>
+        <h2>My name is Sarah Marina and I’m currently studying multimedia design at Zealand academy</h2>
+        <p>I chose to study multimedia design, because of the crippling urge to “create something” wether it being
+            logos, illustrations, webdesign, videography etc.
+            I had little to no experience within the creative field before I began my studies, but that began to
+            change drastically within the first semester of my degree.
+            I have now gained I experience in Adobe Photoshop, Illustrator, XD, Premiere Pro and After effects.
+            I have also gained experience in Visual studio code. I have worked thoroughly with design process and
+            design thinking.
+        </p> <br><br>
+
+        <img class="center" src="img/mig.png" alt="Sarah" />
+    </section>
+
 
 </body>
 
