--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <nav class="navbar">
             <ul>
                 <li>
-                    <a class="active" href="index.html">Work</a>
+                    <a href="index.html">Work</a>
                 </li>
                 <li>
                     <a href="about.html">About</a>
@@ -38,30 +38,30 @@
         </div>
     </header>
 
-    <main>
-        <section class="introtekst">
-            <h1>CONTACT</h1>
-            <p>
-                <div class="container">
-                    <form action="about.php">
 
-                        <label for="name">Name</label>
-                        <input type="text" id="fname" name="Name">
+    <section class="introtekst">
+        <h1>CONTACT</h1>
+        <p>
+            <div class="container">
+                <form action="about.php">
 
-                        <label for="lname">E-mail</label>
-                        <input type="text" id="lname" name="E-mail">
+                    <label for="name">Name</label>
+                    <input type="text" id="fname" name="Name">
 
-                        <label for="subject">Subject</label>
-                        <textarea id="subject" name="subject" style="height:200px"></textarea>
+                    <label for="lname">E-mail</label>
+                    <input type="text" id="lname" name="E-mail">
 
-                        <input type="submit" value="Submit">
+                    <label for="subject">Subject</label>
+                    <textarea id="subject" name="subject" style="height:200px"></textarea>
 
-                    </form>
-                    <!--https://portfolio.adobe.com/4676f381-1a78-4b9d-9efb-65d315a31f1c/editor/contact-->
-                </div>
-            </p>
-        </section>
-    </main>
+                    <input type="submit" value="Submit">
+
+                </form>
+                <!--https://portfolio.adobe.com/4676f381-1a78-4b9d-9efb-65d315a31f1c/editor/contact-->
+            </div>
+        </p>
+    </section>
+
 
 </body>
 
