--- a/portfolio1.html
+++ b/portfolio1.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <ul>
                 <li>
-                    <a class="active" href="index.html">Work</a>
+                    <a href="index.html">Work</a>
                 </li>
                 <li>
                     <a href="about.html">About</a>
@@ -37,25 +37,23 @@
         </div>
     </header>
 
-    <main>
-        <section class="introtekst">
-            <h1>Tangoterapi</h1>
-            <h2>- Webdesign, UI and usersegment</h2>
-            <p>In this project our assignment was to develop digital products for a specific usersegment.
-                Our primary focus was design process. We were given the task to construct a design challenge; “How do we
-                get more people to join tango?”
-                We started our research phase, with deskresearch/observations.
-                Our idea for a solution was to use Tango as a couples therapy trial, where couples would be able to work
-                on their relationsship through dance lessons.
+    <section class="introtekst">
+        <h1>Tangoterapi</h1>
+        <h2>- Webdesign, UI and usersegment</h2>
+        <p>In this project our assignment was to develop digital products for a specific usersegment.
+            Our primary focus was design process. We were given the task to construct a design challenge; “How do we
+            get more people to join tango?”
+            We started our research phase, with deskresearch/observations.
+            Our idea for a solution was to use Tango as a couples therapy trial, where couples would be able to work
+            on their relationsship through dance lessons.
 
-                My primary role in this project was to collect data for target group analyzing.
+            My primary role in this project was to collect data for target group analyzing.
 
 
-            </p>
+        </p>
 
-            <img class="center" src="img/Tangoterapi.jpg" alt="Tangoterapi">
-        </section>
-    </main>
+        <img class="center" src="img/Tangoterapi.jpg" alt="Tangoterapi">
+    </section>
 
 </body>
 
