--- a/portfolio2.html
+++ b/portfolio2.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <ul>
                 <li>
-                    <a class="active" href="index.html">Work</a>
+                    <a href="index.html">Work</a>
                 </li>
                 <li>
                     <a href="about.html">About</a>
@@ -37,26 +37,22 @@
         </div>
     </header>
 
-    <main>
-        <section class="introtekst">
-            <h1>TeamZumba</h1>
-            <h2>Usersegment, optimizing and Iterations</h2>
-            <p>In this project we were given the project of another group.
-                Our task was to optimize and further develop their project. As we saw limitations to their initial
-                concept, we decided to completely redesign the webside and concept.
-                We decided to offer Zumba as teambuilding event for companies who wished to bring the coworkers
-                together.
-                We began a new researchphase, with deskresearch/observations/intervies.
+    <section class="introtekst">
+        <h1>TeamZumba</h1>
+        <h2>Usersegment, optimizing and Iterations</h2>
+        <p>In this project we were given the project of another group.
+            Our task was to optimize and further develop their project. As we saw limitations to their initial
+            concept, we decided to completely redesign the webside and concept.
+            We decided to offer Zumba as teambuilding event for companies who wished to bring the coworkers
+            together.
+            We began a new researchphase, with deskresearch/observations/intervies.
 
-            </p>
-            <p>
-                My role in this project was to administer the design process, and illustrate our iterations in the
-                process.</p>
-            <img class="center" src="img/Teamzumba2.png" alt="TeamZumba">
-        </section>
-
-
-    </main>
+        </p>
+        <p>
+            My role in this project was to administer the design process, and illustrate our iterations in the
+            process.</p>
+        <img class="center" src="img/Teamzumba2.png" alt="TeamZumba">
+    </section>
 
 </body>
 
