--- a/portfolio3.html
+++ b/portfolio3.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <ul>
                 <li>
-                    <a class="active" href="index.html">Work</a>
+                    <a href="index.html">Work</a>
                 </li>
                 <li>
                     <a href="about.html">About</a>
@@ -36,22 +36,21 @@
             <img class="scrolldown" src="img/giphy.gif" alt="scrolldown">
         </div>
     </header>
+    
+    <section class="introtekst">
+        <h1>Gocycle - Startup mission</h1>
+        <h2>- Innovation</h2>
+        <p>In this project, my group and I were in an euntepreneur competition, where our assignment was to develop
+            an idea and make a digital prototype.
+            We chose to design a prototype for an app, with our main focus being recycling and envoirmental
+            solutions.
+            Our app GoCycle works as a platform for buying/selling secondhand, and a sustainable delieverymethod.
 
-    <main>
-        <section class="introtekst">
-            <h1>Gocycle - Startup mission</h1>
-            <h2>- Innovation</h2>
-            <p>In this project, my group and I were in an euntepreneur competition, where our assignment was to develop
-                an idea and make a digital prototype.
-                We chose to design a prototype for an app, with our main focus being recycling and envoirmental
-                solutions.
-                Our app GoCycle works as a platform for buying/selling secondhand, and a sustainable delieverymethod.
+            My role in this project was to collect qualitative and kvantitative data for target group analysing and
+            choosing our design choices.</p>
+        <img class="center" src="img/Gocycle.jpg" alt="GoCycle">
+    </section>
 
-                My role in this project was to collect qualitative and kvantitative data for target group analysing and
-                choosing our design choices.</p>
-            <img class="center" src="img/Gocycle.jpg" alt="GoCycle">
-        </section>
-    </main>
 
 </body>
 
