--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <ul>
                 <li>
-                    <a class="active" href="index.html">Work</a>
+                    <a href="index.html">Work</a>
                 </li>
                 <li>
                     <a href="about.html">About</a>
